# metabo-mcp

./: .gitignore  DEMO.md  README.md  install.py  pyproject.toml
hmdb/: README.md  biological_properties.py  download.py  installer.py  metabolite.py  pathway.py  protein.py  server.py  taxonomy.py  tmp.xml
hmdb/db/: db_format.py  dbclass.py  hmdb.db  schema.sql
hmdb/hmdb_lib/: __init__.py  biological_properties.py  concentration.py  metabolite.py  pathway.py  protein.py  taxonomy.py
hmdb/server_utils/: __init__.py  functional.py  get_cursor.py  search_commands.py
kegg/: README.md  installer.py  server.py
lipidmaps/: README.md  api.py  installer.py  server.py
markerDB/: README.md  installer.py  server.py
markerDB/markers/: __init__.py  chemicals.py  genetic.py  proteins.py
metabo_research/: README.md  langgraph.json  pyproject.toml  server.py
metabo_research/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
metabo_research/agent/: agent.py
metabo_research/agent/nodes/: __init__.py  extractor.py  paper_evaluator.py  rag_reader.py  reformulator.py
metabo_research/agent/prompts/: evaluator_sys.md  extractor_sys.md  reformulator_sys.md
metabo_research/agent/pubmed/: client.py
metabolomic_analysis/: README.md  installer.py  pipeline.py  server.py
metabolomic_analysis/data/: __init__.py  dataloader.py  imputer.py
metabolomic_analysis/optim/: __init__.py  optimizer.py
metabolomic_analysis/results/: __init__.py  conf_matrix.py  feature_importance.py  performances.py
metabolomic_analysis/split/: __init__.py  split.py  spliter.py
metabolomic_analysis/utils/: __init__.py  functional.py  report_builder.py
notes/: Rencontre du 13 Juin 2025.md
notes/.obsidian/: workspace.json
pathbank/: README.md  installer.py  server.py
project_utils/: installer.py
pubchem/: README.md  client.py  installer.py  server.py
pubmed/: README.md  installer.py  server.py
smart_pubmed_search/: installer.py  server.py
smart_pubmed_search/.langgraph_api/: .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
smart_pubmed_search/agent/: workflow.py
smart_pubmed_search/agent/nodes/: extractor.py  paper_evaluator.py
smart_pubmed_search/agent/pubchem/: __init__.py  functional.py
smart_pubmed_search/agent/pubmed/: __init__.py  client.py
(+3 files in other folders)
