[project]
name = "metabo-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antho-utils>=0.1.0",
    "biopython>=1.85",
    "lxml>=5.4.0",
    "mcp>=1.9.4",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "sbmlnetwork>=0.5.9",
    "scikit-learn>=1.7.0",
]
