[project]
name = "metabo-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antho-utils>=0.1.0",
    "biopython>=1.85",
    "lxml>=5.4.0",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "langchain[anthropic]>=0.3.26",
    "langgraph>=0.5.2",
    "langgraph-cli[inmem]>=0.3.4",
    "python-dotenv>=1.1.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "openpyxl>=3.1.5",
    "pyscm-ml==1.1.2",
    "randomscm>=0.1.2",
    "mcp<1.10",
    "reportlab>=4.4.3",
    "xgboost>=3.0.3",
]
